--- a/res/layout/client_list.xml
+++ b/res/layout/client_list.xml
@@ -2,31 +2,49 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="@drawable/linearlayout_background">
-    
-    <RelativeLayout
-	android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="@drawable/custom_border">
-    
-		    <ListView
-		        android:id="@+id/client_list_list"
-		        android:layout_width="fill_parent"
-		        android:layout_height="wrap_content"
-		        android:scrollbars="vertical" 
-		        android:divider="@drawable/listview_divider"
-		        />
-		         
-		    <TextView 
-		        android:id="@+id/client_empty_list"
-		        android:text="@string/empty_list"
-		        android:layout_width="fill_parent"
-		        android:layout_height="fill_parent"
-		        android:textSize="25sp"
-		        android:gravity="center_vertical|center_horizontal"
-		        />
-    
-	</RelativeLayout>	    
-    
+    android:layout_height="fill_parent">
+
+    <LinearLayout
+        android:id="@+id/client_header" 
+        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:orientation="horizontal"
+        >
+		   	<com.markupartist.android.widget.ActionBar
+		      android:id="@+id/actionbar_client_list"
+		      style="@style/ActionBar" />        
+    </LinearLayout>
+
+
+	<RelativeLayout
+	    android:layout_width="fill_parent"
+	    android:layout_height="fill_parent"
+	    android:background="@drawable/linearlayout_background"
+	    android:layout_below="@id/client_header">
+	    
+	    <RelativeLayout
+		android:layout_width="fill_parent"
+	    android:layout_height="fill_parent"
+	    android:background="@drawable/custom_border">
+	    
+			    <ListView
+			        android:id="@+id/client_list_list"
+			        android:layout_width="fill_parent"
+			        android:layout_height="wrap_content"
+			        android:scrollbars="vertical" 
+			        android:divider="@drawable/listview_divider"
+			        />
+			         
+			    <TextView 
+			        android:id="@+id/client_empty_list"
+			        android:text="@string/empty_list"
+			        android:layout_width="fill_parent"
+			        android:layout_height="fill_parent"
+			        android:textSize="25sp"
+			        android:gravity="center_vertical|center_horizontal"
+			        />
+	    
+		</RelativeLayout>	    
+	    
+	</RelativeLayout>
 </RelativeLayout>
