--- a/res/layout/dashboard.xml
+++ b/res/layout/dashboard.xml
@@ -6,12 +6,17 @@
     android:orientation="vertical"
     style="@style/TitleText">
     
+	<com.markupartist.android.widget.ActionBar
+        android:id="@+id/actionbar_mainactivity"
+        style="@style/ActionBar" />    
+    
+	<!-- 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/app_name"
         style="@style/TitleText" />
-
+	-->
     
     <!-- Options -->
     <RelativeLayout 
