--- a/res/layout/service_register.xml
+++ b/res/layout/service_register.xml
@@ -8,8 +8,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical" 
-        style="@style/RegUptActivity"
-        >
+        style="@style/RegUptActivity">
+        
+			<com.markupartist.android.widget.ActionBar
+		      android:id="@+id/actionbar_service_register"
+		      style="@style/ActionBar" />
         
 		    <TextView 
 				android:id="@+cad_servico/lbl_nome_cliente"
