--- a/res/layout/type_of_service_list.xml
+++ b/res/layout/type_of_service_list.xml
@@ -1,32 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical"
-    android:background="@drawable/linearlayout_background">
+    android:layout_height="fill_parent">
 
-    <RelativeLayout
-	android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="@drawable/custom_border">
-        
-	    <ListView 
-	        android:id="@+id/type_of_service_list_list"
-	        android:layout_width="fill_parent"
-	        android:layout_height="wrap_content"
-	        android:scrollbars="vertical" 
-	        android:divider="@drawable/listview_divider"
-	        />      
+    <LinearLayout
+        android:id="@+id/typeofservice_header" 
+        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:orientation="horizontal"
+        >
+		   	<com.markupartist.android.widget.ActionBar
+		      android:id="@+id/actionbar_type_of_service_list"
+		      style="@style/ActionBar" />        
+    </LinearLayout>
+
+	<RelativeLayout
+	    android:layout_width="fill_parent"
+	    android:layout_height="fill_parent"
+	    android:orientation="vertical"
+	    android:background="@drawable/linearlayout_background"
+	    android:layout_below="@id/typeofservice_header">
 	    
-	    <TextView 
-	        android:id="@+id/type_of_service_empty_list"
-	        android:text="@string/empty_list"
-	        android:layout_width="fill_parent"
-	        android:layout_height="fill_parent"
-	        android:textSize="25sp"
-	        android:gravity="center_vertical|center_horizontal"
-	        />
-        
-    </RelativeLayout>
-
+	    <RelativeLayout
+		android:layout_width="fill_parent"
+	    android:layout_height="fill_parent"
+	    android:background="@drawable/custom_border">
+	        
+		    <ListView 
+		        android:id="@+id/type_of_service_list_list"
+		        android:layout_width="fill_parent"
+		        android:layout_height="wrap_content"
+		        android:scrollbars="vertical" 
+		        android:divider="@drawable/listview_divider"
+		        />      
+		    
+		    <TextView 
+		        android:id="@+id/type_of_service_empty_list"
+		        android:text="@string/empty_list"
+		        android:layout_width="fill_parent"
+		        android:layout_height="fill_parent"
+		        android:textSize="25sp"
+		        android:gravity="center_vertical|center_horizontal"
+		        />
+	        
+	    </RelativeLayout>
+	
+	</RelativeLayout>
 </RelativeLayout>
