--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -38,6 +38,11 @@
         <item name="android:textStyle">bold</item>
     </style>
     
+    <style name="LabelDetails">
+        <item name="android:textSize">15sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>    
+    
     <style name="RegUptActivity">
         <item name="android:background">#015488</item>
     </style>
@@ -65,5 +70,31 @@
         <item name="android:paddingBottom">15dp</item>
     </style>    
     
+    <style name="Actionbar">
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">@dimen/actionbar_height</item>
+        <item name="android:orientation">horizontal</item>
+        <item name="android:background">@drawable/actionbar_background</item>        
+    </style>
+    
+        <style name="ActionBarItem">
+        <item name="android:layout_width">@dimen/actionbar_item_width</item>
+        <item name="android:layout_height">@dimen/actionbar_height</item>
+        <item name="android:padding">5dp</item>
+        <item name="android:layout_marginLeft">1dp</item>
+    </style>
+    
+    <style name="ActionBarHomeItem" parent="ActionBarItem">
+        <item name="android:layout_marginRight">1dp</item>
+        <item name="android:layout_marginLeft">0px</item>
+    </style>
+    
+    <style name="ActionBarHomeLogo">
+        <item name="android:layout_marginRight">1dp</item>
+        <item name="android:layout_marginLeft">0px</item>
+    </style>
+    
+    <style name="ActionBarProgressBar" parent="@android:style/Widget.ProgressBar.Small">
+    </style>
     
 </resources>
