AsyncTask que obtem os resultados da busca no Indeed agora está utilizando List<IndeedResult> ao invés de String[]

--- a/res/layout/client_list.xml
+++ b/res/layout/client_list.xml
@@ -12,7 +12,7 @@
         >
 		   	<com.markupartist.android.widget.ActionBar
 		      android:id="@+id/actionbar_client_list"
-		      style="@style/ActionBar" />        
+		      style="@style/Actionbar" />        
     </LinearLayout>
 
 
