--- a/res/layout/indeed_search.xml
+++ b/res/layout/indeed_search.xml
@@ -45,7 +45,7 @@
 
 	    	    
 	<ListView
-		android:id="@+id/indeed_search_list"
+		android:id="@+id/indeed_search_result_list"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:scrollbars="vertical" 
